# mlx-audio-tts

./: .gitignore  CLAUDE.md  LICENSE  README.md  example_agent.py  install_tts_service.sh  pyproject.toml  requirements.txt  run.sh  run_with_uv.py  start_tts_service.sh  status_tts_service.sh  stop_tts_service.sh
backend/: config.py  main.py
backend/api/: models.py  routes.py  routes.py.bak
backend/services/: file_service.py  recording_manager.py  tts_service.py  voice_recorder.py
backend/utils/: validators.py
client/: tts_client.py
frontend/: index.html  index.html.bak
frontend/css/: styles.css
frontend/js/: api.js  app.js  audio-player.js  audio-recorder.js  ui.js  voice-recorder-ui.js
scripts/: agent_integration.py  voice_cloning_interface.py
service/: tts_manager.py
